# embassy-stm32f4-template

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
